Fix divider line visibility issue
- Decreased the lightness value by 5% to make the color noticable on the background
- Added overflow: visible; to <hr> to reveal the slash symbol

Refs #40, #57

--- a/assets/css/components/global.css
+++ b/assets/css/components/global.css
@@ -288,7 +288,8 @@ hr {
     padding: 0;
     height: 1px;
     border: 0;
-    border-top: 1px solid color(var(--color-border) l(+10%));
+    border-top: 1px solid color(var(--color-border) l(+5%));
+    overflow: visible;
 }
 
 audio,
